ajustes no relatório de recordes de corridas

--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -74,7 +74,7 @@
                     <p class="align-middle d-inline">
                         <i class='fas align-middle navico'>&#xf6e8;</i>
                         <br>
-                        <b>Criar</b>
+                        <b>Gravar</b>
                     </p>
                 </button>
                 <button class="btn bgBLK text-white dropdown-toggle dropdown-toggle-split"
@@ -87,7 +87,7 @@
                     <a class="dropdown-item" href="/ativ/nova">Atividades</a>
                     <a class="dropdown-item" href="/ini/nova">Iniciativas</a>
                     <a class="dropdown-item" href="/obj/nova">Objetivos</a>
-                    <a class="dropdown-item" href="/run/nova">Registro de Corrida</a>
+                    <a class="dropdown-item" href="/run/nova">Corrida</a>
                 </div>
             </div> 
         </div>
