--- a/views/novaCorrida.ejs
+++ b/views/novaCorrida.ejs
@@ -97,6 +97,7 @@
                 </form>                
             </section>
         </main>
-    </body>    
+    </body> 
+    <script src="../src/carregarDataAgora.js"></script>   
 </html>
 
