Melhoria na página de recordes e inclusão do pace médio

--- a/views/recordesCorridas.ejs
+++ b/views/recordesCorridas.ejs
@@ -11,16 +11,14 @@
     </head>
     <body>
         <%- include('nav'); %>
-        <br><br><br>
-        <main class="table-responsive mt-5">
-            <h2><br><br>Melhores tempos</h2><br>
+        <main class="table-responsive mt-5 p-2 text-center mx-auto" style="max-width: 750px;">
+            <p style="font-size: xx-large; font-weight: bold; color: black;"><br><br>Melhores tempos</p><br>
             <table class="table table-hover table-sm">
                 <thead class="thead-dark">
                   <tr>
                       <th rowspan="2"># Km</th>
                       <th colspan="2">Melhor Tempo</th>
                       <th>Pace Médio</th>
-                      <th>Tempo Total</th>
                   </tr>
                   <tr>
                     <th scope="col">no Km</th>
@@ -33,106 +31,127 @@
                     <th scope="row">1</th>
                     <td id="MTDisc1"></td>
                     <td id="MTAcc1"></td>
+                    <td id="Pace1"></td>
                   </tr>
                   <tr>
                     <th scope="row">2</th>
                     <td id="MTDisc2"></td>
                     <td id="MTAcc2"></td>
+                    <td id="Pace2"></td>
                   </tr>
                   <tr>
                     <th scope="row">3</th>
                     <td id="MTDisc3"></td>
                     <td id="MTAcc3"></td>
+                    <td id="Pace3"></td>
                   </tr>
                   <tr>
                     <th scope="row">4</th>
                     <td id="MTDisc4"></td>
                     <td id="MTAcc4"></td>
+                    <td id="Pace4"></td>
                   </tr>
                   <tr>
                     <th scope="row">5</th>
                     <td id="MTDisc5"></td>
                     <td id="MTAcc5"></td>
+                    <td id="Pace5"></td>
                   </tr>
                   <tr>
                     <th scope="row">6</th>
                     <td id="MTDisc6"></td>
                     <td id="MTAcc6"></td>
+                    <td id="Pace6"></td>
                   </tr>
                   <tr>
                     <th scope="row">7</th>
                     <td id="MTDisc7"></td>
                     <td id="MTAcc7"></td>
+                    <td id="Pace7"></td>
                   </tr>
                   <tr>
                     <th scope="row">8</th>
                     <td id="MTDisc8"></td>
                     <td id="MTAcc8"></td>
+                    <td id="Pace8"></td>
                   </tr>
                   <tr>
                     <th scope="row">9</th>
                     <td id="MTDisc9"></td>
                     <td id="MTAcc9"></td>
+                    <td id="Pace9"></td>
                   </tr>
                   <tr>
                     <th scope="row">10</th>
                     <td id="MTDisc10"></td>
                     <td id="MTAcc10"></td>
+                    <td id="Pace10"></td>
                   </tr>
                   <tr>
                     <th scope="row">11</th>
                     <td id="MTDisc11"></td>
                     <td id="MTAcc11"></td>
+                    <td id="Pace11"></td>
                   </tr>
                   <tr>
                     <th scope="row">12</th>
                     <td id="MTDisc12"></td>
                     <td id="MTAcc12"></td>
+                    <td id="Pace12"></td>
                   </tr>
                   <tr>
                     <th scope="row">13</th>
                     <td id="MTDisc13"></td>
                     <td id="MTAcc13"></td>
+                    <td id="Pace13"></td>
                   </tr>
                   <tr>
                     <th scope="row">14</th>
                     <td id="MTDisc14"></td>
                     <td id="MTAcc14"></td>
+                    <td id="Pace14"></td>
                   </tr>
                   <tr>
                     <th scope="row">15</th>
                     <td id="MTDisc15"></td>
                     <td id="MTAcc15"></td>
+                    <td id="Pace15"></td>
                   </tr>
                   <tr>
                     <th scope="row">16</th>
                     <td id="MTDisc16"></td>
                     <td id="MTAcc16"></td>
+                    <td id="Pace16"></td>
                   </tr>
                   <tr>
                     <th scope="row">17</th>
                     <td id="MTDisc17"></td>
                     <td id="MTAcc17"></td>
+                    <td id="Pace17"></td>
                   </tr>
                   <tr>
                     <th scope="row">18</th>
                     <td id="MTDisc18"></td>
                     <td id="MTAcc18"></td>
+                    <td id="Pace18"></td>
                   </tr>
                   <tr>
                     <th scope="row">19</th>
                     <td id="MTDisc19"></td>
                     <td id="MTAcc19"></td>
+                    <td id="Pace19"></td>
                   </tr>
                   <tr>
                     <th scope="row">20</th>
                     <td id="MTDisc20"></td>
                     <td id="MTAcc20"></td>
+                    <td id="Pace20"></td>
                   </tr>
                   <tr>
                     <th scope="row">21</th>
                     <td id="MTDisc21"></td>
                     <td id="MTAcc21"></td>
+                    <td id="Pace21"></td>
                   </tr>
                 </tbody>
               </table>
