--- a/views/atividades.ejs
+++ b/views/atividades.ejs
@@ -19,7 +19,7 @@
 
     </head>
     <body>
-        <%- include('navPlan'); %>
+        <%- include('Plan'); %>
         
         <main class="container">
 
