--- a/views/iniciativas.ejs
+++ b/views/iniciativas.ejs
@@ -20,7 +20,7 @@
         <link rel="stylesheet" type="text/css" href="../styles/main.css">
     </head>
     <body>
-        <%- include('navPlan'); %>
+        <%- include('nav'); %>
 
         <main class="container">
             <section>
