--- a/views/novoObjetivo.ejs
+++ b/views/novoObjetivo.ejs
@@ -13,7 +13,7 @@
 
     </head>
     <body>
-        <%- include('navPlan'); %>
+        <%- include('nav'); %>
 
         <main class="container mt-5">
 
