--- a/views/runHome.ejs
+++ b/views/runHome.ejs
@@ -21,35 +21,7 @@
         </header>
         <main class="container">
            
-            <div class="grid mx-3">
-                <div class="row">
-                    <div class="col bg-dark text-white h5 p-2 rounded">Corrida</div>
-                </div>
-                <div class="row text-center">
-                    <div class="col-4">
-                        <a href="/run/nova" class="link">
-                            <img src="../img/newrun.jpg" style="width: 8vw;" class="my-2">
-                            <br>
-                            <span class="legico">Registrar Corrida</span>
-                        </a>                
-                    </div>
-                    <div class="col-4">
-                        <a href="/run/lista" class="link">
-                            <img src="../img/tracks.jpg" style="width: 8vw;" class="my-2">
-                            <br>
-                            <span class="legico">Ver Corridas Salvas</span>
-                        </a>
-                    </div>
-                    <div class="col-4">
-                        <a href="/run/best" class="link"> 
-                            <img src="../img/runrecord.jpg" style="width: 8vw;" class="my-2">
-                            <br>
-                           <span class="legico">Melhores Tempos</span>
-                        </a>
-                    </div>
-                </div>
-
-            </div>
+            <%- include('RunMenu'); %>
 
             <br>
             
