--- a/views/objetivos.ejs
+++ b/views/objetivos.ejs
@@ -19,7 +19,7 @@
         <link rel="stylesheet" type="text/css" href="../styles/main.css">
     </head>
     <body>
-        <%- include('navPlan'); %>
+        <%- include('nav'); %>
 
         <main class="container"> 
 
