--- a/views/alimHome.ejs
+++ b/views/alimHome.ejs
@@ -3,7 +3,10 @@
     <head>
         <title>PBSC: Alimentação</title>
         <%- include('meta'); %>
-        <link rel="stylesheet" type="text/css" href="../styles/main.css">
+        <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     </head>
     <body>
         <%- include('nav'); %>
