--- a/views/atividades.ejs
+++ b/views/atividades.ejs
@@ -3,7 +3,7 @@
     <head>
         <title>Planejamento: Lista de Atividades</title>
         <%- include('meta'); %>
-
+        <script src='https://kit.fontawesome.com/a076d05399.js'></script>
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -19,7 +19,7 @@
 
     </head>
     <body>
-        <%- include('Plan'); %>
+        <%- include('nav'); %>
         
         <main class="container">
 
@@ -30,8 +30,5 @@
         </main>
         
     </body>
-
-    <script src="../src/titulo.js" type="text/javascript"></script>
-
 </html>
 
