--- a/views/novaAtividade.ejs
+++ b/views/novaAtividade.ejs
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Planejamento: Nova Atividade</title>
         <%- include('meta'); %>
-
-        <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+        <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-
+        <title>Planejamento: Nova Atividade</title>
         <script src="../src/gravarNovaAtividade.js" type="text/javascript"></script>
         <script src="../src/ajustaDataBr.js" type="text/javascript"></script>
 
