--- a/views/planHome.ejs
+++ b/views/planHome.ejs
@@ -4,7 +4,8 @@
         <title>PBSC: Planejamento</title>
         <%- include('meta'); %>
 
-        <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+        <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
         <script src="../src/todasAtividades.js" type="text/javascript"></script>
