--- a/views/recordesCorridas.ejs
+++ b/views/recordesCorridas.ejs
@@ -3,6 +3,7 @@
     <head>
         <title>Corridas: Recordes</title>
         <%- include('meta'); %>
+        <script src='https://kit.fontawesome.com/a076d05399.js'></script>
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -25,7 +26,7 @@
                     <th scope="col">até Km</th>
                     <th scope="col">até Km</th>
                   </tr>
-                </thead> 
+                </thead>
                 <tbody>
                   <tr>
                     <th scope="row">1</th>
