Teste de localização via API do Google

--- a/views/maps.ejs
+++ b/views/maps.ejs
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <%- include('meta'); %>
     <title>Mapa da Localização Atual</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=nt&callback=initMap&libraries=&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDEZEBwEq2FCna70N-F9rWX5pSdqnWYt4E&callback=initMap"
       defer
     ></script>
     <style type="text/css">
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
       #map {
-        height: 95%;
-        width: 75%;
+        height: 90%;
+        width: 100%;
       }
 
       /* Optional: Makes the sample page fill the window. */
@@ -25,7 +26,7 @@
     <script src="../src/localizacao.js"></script>
   </head>
   <body>
-    
+    <%- include('nav'); %>
     <div id="map"></div>
   </body>
 </html>
