Teste maps no celular

--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -67,6 +67,10 @@
                     <a class="dropdown-item" href="/obj/">Objetivos</a>
                     <a class="dropdown-item" href="/run/lista">Lista de Corridas</a>
                     <a class="dropdown-item" href="/run/best">Recordes de Corridas</a>
+                    <a class="dropdown-item" href="/run/mapa">
+                        Mapa 
+                        <strong>(*Em Teste!!!)</strong>
+                    </a>
                 </div>
             </div>
             <div class="btn-group mr-2 mb-2 mt-2">
