--- a/views/RunMenu.ejs
+++ b/views/RunMenu.ejs
@@ -3,30 +3,30 @@
         <div class="col bg-dark text-white h5 p-2 rounded">Corrida</div>
     </div>
     <div class="row text-center">
-        <div class="col-3">
+        <div class="col">
             <a href="/run/mapa" class="link"> 
-                <img src="../img/map1.png" style="width: 8vw;" class="my-2">
+                <img src="../img/map1.png" class="my-2 icoHome">
                 <br>
-               <span class="legico">Gravar Corria <br>(Ao Vivo)</span>
+               <span class="legico">Gravar <br>(Ao Vivo)</span>
             </a>
         </div>
-        <div class="col-3">
+        <div class="col">
             <a href="/run/nova" class="link">
-                <img src="../img/newrun.jpg" style="width: 8vw;" class="my-2">
+                <img src="../img/newrun.jpg" class="my-2 icoHome">
                 <br>
-                <span class="legico">Digitar e Gravar Corrida</span>
+                <span class="legico">Gravar <br>(Manual)</span>
             </a>                
         </div>
-        <div class="col-3">
+        <div class="col">
             <a href="/run/lista" class="link">
-                <img src="../img/tracks.jpg" style="width: 8vw;" class="my-2">
+                <img src="../img/tracks.jpg" class="my-2 icoHome">
                 <br>
-                <span class="legico">Ver Corridas Salvas</span>
+                <span class="legico">Ver Todas</span>
             </a>
         </div>
-        <div class="col-3">
+        <div class="col">
             <a href="/run/best" class="link"> 
-                <img src="../img/runrecord.jpg" style="width: 8vw;" class="my-2">
+                <img src="../img/runrecord.jpg" class="my-2 icoHome">
                 <br>
                <span class="legico">Melhores Tempos</span>
             </a>
