--- a/views/meta.ejs
+++ b/views/meta.ejs
@@ -11,3 +11,4 @@
 <link rel="stylesheet" type="text/css" href="../styles/hr.css">
 <link rel="stylesheet" type="text/css" href="../styles/main.css">
 <link rel="stylesheet" type="text/css" href="../styles/login.css">
+<link rel="stylesheet" type="text/css" href="../styles/mainIcon.css">
