--- a/views/meta.ejs
+++ b/views/meta.ejs
@@ -12,3 +12,4 @@
 <link rel="stylesheet" type="text/css" href="../styles/main.css">
 <link rel="stylesheet" type="text/css" href="../styles/login.css">
 <link rel="stylesheet" type="text/css" href="../styles/mainIcon.css">
+<link rel="stylesheet" type="text/css" href="../styles/map.css">
