--- a/views/btnLocalAtual.ejs
+++ b/views/btnLocalAtual.ejs
@@ -1,5 +1,10 @@
 <a onclick="javascript: obterLocalAtual()">
-    <div class="localIco fas" data-toggle="tooltip" title="IR PARA: Meu Local Atual">
+    <div class="localIco1 fas" data-toggle="tooltip" title="IR PARA: Meu Local Atual">
         &#xf05b;
+    </div>
+</a>
+<a onclick="javascript: teste()">
+    <div class="localIco2 fas" data-toggle="tooltip" title="IR PARA: Teste">
+        &#xf13d;
     </div>
 </a>
