--- a/styles/map.css
+++ b/styles/map.css
@@ -1,4 +1,4 @@
-.localIco{
+.localIco1{
     background-color: #0B00FF;
     color: white;
     position: fixed;
@@ -8,7 +8,16 @@
     padding: 0.75rem;
     z-index: +1;
 }
-
+.localIco2{
+    background-color:#FF0002;
+    color: white;
+    position: fixed;
+    bottom: 40%;
+    right: 0.75em;
+    font-size: 1.5rem;
+    padding: 0.75rem;
+    z-index: +1;
+}
 #map {
     height: 100%;
     width: 100%;
