--- a/views/meta.ejs
+++ b/views/meta.ejs
@@ -3,6 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+<meta name="keywords" content="PBSC, Balanced Scorecard, BSC, Bruno Rodrigues de Carvalho">
 
 <link rel="shortcut icon" href="../img/ico_wh2x2.png">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
