--- a/views/btnLocalAtual.ejs
+++ b/views/btnLocalAtual.ejs
@@ -1,10 +1,16 @@
 <a onclick="javascript: obterLocalAtual()">
-    <div class="localIco1 fas" data-toggle="tooltip" title="IR PARA: Meu Local Atual">
+    <div class="localIco localIco1 fas" data-toggle="tooltip" title="IR PARA: Meu Local Atual">
         &#xf05b;
     </div>
 </a>
-<a onclick="javascript: teste()">
-    <div class="localIco2 fas" data-toggle="tooltip" title="IR PARA: Teste">
+<a onclick="javascript: gravarAtual()">
+    <div class="localIco localIco2 fas" data-toggle="tooltip" title="IR PARA: Teste Oficial">
+        &#xf13d;
+    </div>
+</a>
+
+<a onclick="javascript: preencherHistoria()">
+    <div class="localIco localIco3 fas" data-toggle="tooltip" title="IR PARA: Mostrar o que foi gravado">
         &#xf13d;
     </div>
 </a>
