--- a/views/btnLocalAtual.ejs
+++ b/views/btnLocalAtual.ejs
@@ -9,7 +9,7 @@
     </div>
 </a>
 
-<a onclick="javascript: preencherHistoria()">
+<a onclick="javascript: testebackup()">
     <div class="localIco localIco3 fas" data-toggle="tooltip" title="IR PARA: Mostrar o que foi gravado">
         &#xf13d;
     </div>
