Atualização no codigo que grava as rotas de corrida no maps

--- a/styles/map.css
+++ b/styles/map.css
@@ -3,10 +3,11 @@
 .localIco{
     color: white;
     position: fixed;
-    right: 0.75em;
+    right: 0.75rem;
     font-size: 1.5rem;
     padding: 0.75rem;
     z-index: +1;
+    border-radius: 2rem;
 }
 .localIco1{
     background-color: #0B00FF;
