--- a/views/maps.ejs
+++ b/views/maps.ejs
@@ -13,11 +13,12 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script src="../src/mapsKey.js"></script>
-    <script src="../src/localizacao.js"></script>
   </head>
   <body>
     <%- include('nav'); %>
+    <%- include('contador'); %>
     <div id="map"></div>
     <%- include('btnLocalAtual'); %>
   </body>
+  <script src="../src/localizacao.js"></script>
 </html>
