--- a/views/btnLocalAtual.ejs
+++ b/views/btnLocalAtual.ejs
@@ -2,10 +2,10 @@
     <p class="fas">&#xf05b;</p>
 </div>
 
-<div class="fas localIco localIco3" data-toggle="tooltip" title="Encerrar atividade" id="btnAcabarRun">
-    <a onclick="javascript: mostrarBtnIniciar()">Encerrar</a>
+<div onclick="javascript: mostrarBtnIniciar()" class="fas localIco localIco3" data-toggle="tooltip" title="Encerrar atividade" id="btnAcabarRun">
+    Encerrar
 </div>
 
-<div class="localIco localIco2 fas" data-toggle="tooltip" title="Iniciar Corrida" id="btnIniciarRun">
-    <a onclick="javascript: mostrarBtnEncerrar()">Iniciar</a>
+<div onclick="javascript: mostrarBtnEncerrar()" class="localIco localIco2 fas" data-toggle="tooltip" title="Iniciar Corrida" id="btnIniciarRun">
+    Iniciar
 </div>
