--- a/views/contador.ejs
+++ b/views/contador.ejs
@@ -1,1 +1,20 @@
-<div class="contador" id="displayContador"></div>
+<div class="disPlay">
+  <div class="row limiteDisplay m-auto">
+    <div class="col item"> 
+        <div class="row txtDisplay">0.000</div>
+        <div class="row legDisplay">Dist. (Km)</div>
+    </div> 
+    <div class="col item"> 
+        <div class="row txtDisplay" id="displayTimer"></div>
+        <div class="row legDisplay">Tempo Total</div>
+    </div>
+    <div class="col item"> 
+        <div class="row txtDisplay">0.00</div>
+        <div class="row legDisplay">Vel (Km/h)</div>
+    </div>
+    <div class="col item"> 
+        <div class="row txtDisplay">00:00</div>
+        <div class="row legDisplay">Pace (min/km)</div>
+    </div>  
+  </div>
+</div> 
