--- a/views/alimHome.ejs
+++ b/views/alimHome.ejs
@@ -3,7 +3,6 @@
     <head>
         <title>PBSC: Alimentação</title>
         <%- include('meta'); %>
-        <script src='https://kit.fontawesome.com/a076d05399.js'></script>
         <script  
             src="https://code.jquery.com/jquery-3.5.1.min.js"
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
@@ -23,9 +22,6 @@
         <main class="container">
             <h2>Alimentação HOME</h2>
         </main>
-    
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     </body>
+    <%- include('scripts'); %>
 </html>
