--- a/views/corridas.ejs
+++ b/views/corridas.ejs
@@ -3,34 +3,17 @@
     <head>
         <title>Corridas: Lista de Corridas</title>
         <%- include('meta'); %>
-        <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-        <script  
-            src="https://code.jquery.com/jquery-3.5.1.min.js"
-            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-            crossorigin="anonymous"
-        >
-        </script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-        <script src="../src/todasCorridas.js" type="text/javascript"></script>        
-        <script src="../src/botao_excluir.js" type="text/javascript"></script>
-        <script src="../src/expandirCard.js" type="text/javascript"></script>
-        <script src="../src/transSegMin.js" type="text/javascript"></script>
-
-
     </head>
     <body>
         <%- include('nav'); %>
-        
         <main class="container">
-
-            <div class="row mgresp" id="Run">
-
-            </div>
-
+            <div class="row mgresp" id="Run"></div>
         </main>
-        
     </body>
-
+    <%- include('scripts'); %>
+    <script src="../src/todasCorridas.js" type="text/javascript"></script>        
+    <script src="../src/botao_excluir.js" type="text/javascript"></script>
+    <script src="../src/expandirCard.js" type="text/javascript"></script>
+    <script src="../src/transSegMin.js" type="text/javascript"></script>
 </html>
 
