--- a/views/gymHome.ejs
+++ b/views/gymHome.ejs
@@ -3,20 +3,9 @@
     <head>
         <title>PBSC: Academia</title>
         <%- include('meta'); %>
-        <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-        <script  
-            src="https://code.jquery.com/jquery-3.5.1.min.js"
-            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-            crossorigin="anonymous"
-        >
-        </script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="../styles/main.css">
     </head>
     <body>
         <%- include('nav'); %>
-
         <header class="container">
             <hr>
             <h1>Bem Vindo, <%= user.username %>!</h1>
@@ -24,9 +13,6 @@
         <main class="container">
             <h2>Musculação HOME</h2>
         </main>
-    
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     </body>
+    <%- include('scripts'); %>
 </html>
