--- a/views/iniciativas.ejs
+++ b/views/iniciativas.ejs
@@ -2,43 +2,25 @@
 <html>
     <head>
         <title>Planejamento: Lista de Iniciativas</title>
-        <%- include('meta'); %>
-        <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-        <script  
-            src="https://code.jquery.com/jquery-3.5.1.min.js"
-            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-            crossorigin="anonymous"
-        >
-        </script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-        <script src="../src/todasIniciativas.js" type="text/javascript"></script>
-        <script src="../src/botao_excluir.js" type="text/javascript"></script>
-        <script src="../src/botao_concluir.js" type="text/javascript"></script>
-        <script src="../src/botao_andamento.js" type="text/javascript"></script>
-        <script src="../src/emconstrucao.js" type="text/javascript"></script>
-        <script src="../src/expandirCard.js" type="text/javascript"></script>
-        <script src="../src/colorirStatus.js" type="text/javascript"></script>
-        <script src="../src/stringDataBr.js" type="text/javascript"></script>
-
-        
+        <%- include('meta'); %>        
         <link rel="stylesheet" type="text/css" href="../styles/main.css">
     </head>
     <body>
         <%- include('nav'); %>
-
         <main class="container">
             <section>
-            
-                <div class="row mgresp" id="Ini">
-
-                </div>
-            
+                <div class="row mgresp" id="Ini"></div>
             </section>
-            
         </main>
-        
     </body>
-    <script src="../src/titulo.js" type="text/javascript"></script>
+    <%- include('scripts'); %>
+    <script src="../src/todasIniciativas.js" type="text/javascript"></script>
+    <script src="../src/botao_excluir.js" type="text/javascript"></script>
+    <script src="../src/botao_concluir.js" type="text/javascript"></script>
+    <script src="../src/botao_andamento.js" type="text/javascript"></script>
+    <script src="../src/emconstrucao.js" type="text/javascript"></script>
+    <script src="../src/expandirCard.js" type="text/javascript"></script>
+    <script src="../src/colorirStatus.js" type="text/javascript"></script>
+    <script src="../src/stringDataBr.js" type="text/javascript"></script>
 </html>
 
