--- a/views/novaAtividade.ejs
+++ b/views/novaAtividade.ejs
@@ -2,19 +2,7 @@
 <html>
     <head>
         <%- include('meta'); %>
-        <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-        <script  
-            src="https://code.jquery.com/jquery-3.5.1.min.js"
-            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-            crossorigin="anonymous"
-        >
-        </script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
         <title>Planejamento: Nova Atividade</title>
-        <script src="../src/gravarNovaAtividade.js" type="text/javascript"></script>
-        <script src="../src/ajustaDataBr.js" type="text/javascript"></script>
-
     </head>
     <body>
         <%- include('nav'); %>
@@ -89,13 +77,13 @@
                             >
                         </div>
                     </div>
-                    
                 </form>
             </section>
-            
-        </main>
-        
+        </main> 
     </body>
+    <%- include('scripts'); %>
+    <script src="../src/gravarNovaAtividade.js" type="text/javascript"></script>
+    <script src="../src/ajustaDataBr.js" type="text/javascript"></script>
     <script src="../src/titulo.js" type="text/javascript"></script>
     <script src="../src/statusAtividade.js"></script>
     <script src="../src/listaIniciativas.js"></script>
