--- a/views/novaIniciativa.ejs
+++ b/views/novaIniciativa.ejs
@@ -3,17 +3,6 @@
     <head>
         <title>Planejamento: Nova Iniciativa</title>
         <%- include('meta'); %>
-        <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-        <script  
-            src="https://code.jquery.com/jquery-3.5.1.min.js"
-            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-            crossorigin="anonymous"
-        >
-        </script><script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-        <script src="../src/gravarNovaIniciativa.js" type="text/javascript"></script>
-        <script src="../src/ajustaDataBr.js" type="text/javascript"></script>
-
     </head>
     <body>
         <%- include('nav'); %>
@@ -95,10 +84,12 @@
         </main>
         
     </body>
+    <%- include('scripts'); %>
+    <script src="../src/gravarNovaIniciativa.js" type="text/javascript"></script>
+    <script src="../src/ajustaDataBr.js" type="text/javascript"></script>
     <script src="../src/titulo.js" type="text/javascript"></script>
     <script src="../src/statusIniciativa.js"></script>
     <script src="../src/listaObjetivos.js"></script>
     <script src="../src/dataIniciativa.js"></script>
-    
 </html>
 
