--- a/views/novoObjetivo.ejs
+++ b/views/novoObjetivo.ejs
@@ -3,18 +3,6 @@
     <head>
         <title>Planejamento: Novo Objetivo</title>
         <%- include('meta'); %>
-        <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-        <script  
-            src="https://code.jquery.com/jquery-3.5.1.min.js"
-            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-            crossorigin="anonymous"
-        >
-        </script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-        <script src="../src/gravarNovoObjetivo.js" type="text/javascript"></script>
-        <script src="../src/ajustaDataBr.js" type="text/javascript"></script>
-
     </head>
     <body>
         <%- include('nav'); %>
@@ -89,9 +77,11 @@
             </section>
         </main>
     </body>
+    <%- include('scripts'); %>
+    <script src="../src/gravarNovoObjetivo.js" type="text/javascript"></script>
+    <script src="../src/ajustaDataBr.js" type="text/javascript"></script>
     <script src="../src/titulo.js" type="text/javascript"></script>
     <script src="../src/statusObjetivo.js"></script>
     <script src="../src/dataObjetivo.js"></script>
-    
 </html>
 
