--- a/views/recordesCorridas.ejs
+++ b/views/recordesCorridas.ejs
@@ -3,17 +3,6 @@
     <head>
         <title>Corridas: Recordes</title>
         <%- include('meta'); %>
-        <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-        <script  
-            src="https://code.jquery.com/jquery-3.5.1.min.js"
-            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-            crossorigin="anonymous"
-        >
-        </script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-        <script src="../src/recordesCorridas.js"></script>
-        <script src="../src/transSegMin.js"></script>
     </head>
     <body>
         <%- include('nav'); %>
@@ -162,6 +151,9 @@
                 </tbody>
               </table>
         </main>
-    </body>    
+    </body>
+    <%- include('scripts'); %>
+    <script src="../src/recordesCorridas.js"></script>
+    <script src="../src/transSegMin.js"></script>  
 </html>
 
