--- a/views/runHome.ejs
+++ b/views/runHome.ejs
@@ -3,23 +3,7 @@
     <head>
         <%- include('meta'); %>
         <title>PBSC: Corrida</title>
-        <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-        <script  
-            src="https://code.jquery.com/jquery-3.5.1.min.js"
-            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-            crossorigin="anonymous"
-        >
-        </script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-        <script
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDEZEBwEq2FCna70N-F9rWX5pSdqnWYt4E&callback=initMap&libraries=&v=weekly"
-            defer
-        ></script>
-        <script src="../src/localizacao.js"></script>
-        
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">        
     </head>
     <body>
         <%- include('nav'); %>
@@ -31,13 +15,10 @@
             <h2>Escolha uma das opções</h2>
         </header>
         <main class="container">
-           
             <%- include('runMenu'); %>
-
             <br>
-
             <div id="map"></div>
-
         </main>
     </body>
+    <%- include('scripts'); %>
 </html>
