Ajustes para calcular distância

--- a/views/contador.ejs
+++ b/views/contador.ejs
@@ -1,7 +1,7 @@
 <div class="disPlay">
   <div class="row limiteDisplay m-auto">
     <div class="col item"> 
-        <div class="row txtDisplay">0.000</div>
+        <div class="row txtDisplay" id="displayDist"></div>
         <div class="row legDisplay">Dist. (Km)</div>
     </div> 
     <div class="col item"> 
