--- a/views/maps.ejs
+++ b/views/maps.ejs
@@ -21,4 +21,5 @@
     <%- include('btnLocalAtual'); %>
   </body>
   <script src="../src/localizacao.js"></script>
+  <script src="../src/calcularDistGPS.js"></script>
 </html>
